Made some changes to the database.
"### Changes"
- Removed `username` column and added `given_name` column in `users` table.
- Replaced all `username` with `given_name`.
- Replaced the now-gone `username` attribute with the `email` attribute as one of the attributes required for auth.
